--- a/rdr2.html
+++ b/rdr2.html
@@ -53,7 +53,7 @@
 
             <main class="gamesMain">
                 <article class="poster">
-                    <img id="rdrPoster" src="/images/rdr2.jpeg" alt="rdr2 poster">
+                    <img id="rdrPoster" src="./images/rdr2.jpeg" alt="rdr2 poster">
                 </article>
 
                 <article class="features">
@@ -75,7 +75,7 @@
 
                 <article class="vid">
                     <video controls autoplay muted>    <!--Attribute controls in video tag adds video controls.-->
-                    <source src="/videos/rdr2vid.mp4" type="video/mp4">
+                    <source src="./videos/rdr2vid.mp4" type="video/mp4">
                     Browser doesn't support video tag.  <!--Text displayed on the browsers where video tag is not supported-->
                     </video>
                 </article>
