modified file paths

--- a/tombraider.html
+++ b/tombraider.html
@@ -49,7 +49,7 @@
           <article class="poster">
             <img
               id="trPoster"
-              src="/images/tombraider.jpg"
+              src="./images/tombraider.jpg"
               alt="tombraider poster"
             />
           </article>
@@ -69,7 +69,7 @@
           <article class="vid">
             <video width="1278" height="500" controls autoplay muted>
               <!--Attribute controls in video tag adds video controls.-->
-              <source src="/videos/tombraidervid.mp4" type="video/mp4" />
+              <source src="./videos/tombraidervid.mp4" type="video/mp4" />
               Browser doesn't support video tag.
               <!--Text displayed on the browsers where video tag is not supported-->
             </video>
