--- a/gta4.html
+++ b/gta4.html
@@ -50,7 +50,7 @@
           <article class="poster">
             <img
               id="gtaPoster"
-              src="/images/gta4.jpeg"
+              src="./images/gta4.jpeg"
               alt="gta4 poster"
             />
           </article>
@@ -77,7 +77,7 @@
           <article class="vid">
             <video width="1278" height="500" controls autoplay muted>
               <!--Attribute controls in video tag adds video controls.-->
-              <source src="/videos/gta4vid.mp4" type="video/mp4" />
+              <source src="./videos/gta4vid.mp4" type="video/mp4" />
               Browser doesn't support video tag.
               <!--Text displayed on the browsers where video tag is not supported-->
             </video>
